[package]
name = "stable-eyre"
version = "0.2.2"
authors = ["Jane Lusby <jlusby@yaah.dev>"]
edition = "2018"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/yaahc/stable-eyre"
homepage = "https://github.com/yaahc/stable-eyre"
documentation = "https://docs.rs/stable-eyre"
description = """
A custom context for eyre that supports capturing Backtraces on stable
"""

[dependencies]
backtrace = { version = "0.3.48", features = ["gimli-symbolize"] }
indenter = "0.3.0"
eyre = "0.6.0"

[profile.dev.package.backtrace]
opt-level = 3

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata.release]
no-dev-version = true

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "Unreleased"
replace="{{version}}"

[[package.metadata.release.pre-release-replacements]]
file = "src/lib.rs"
search = "#!\\[doc\\(html_root_url.*"
replace = "#![doc(html_root_url = \"https://docs.rs/{{crate_name}}/{{version}}\")]"
exactly = 1

# [[package.metadata.release.pre-release-replacements]]
# file = "CHANGELOG.md"
# search = "\\.\\.\\.HEAD"
# replace="...{{tag_name}}"
# exactly = 1

[[package.metadata.release.pre-release-replacements]]
file = "CHANGELOG.md"
search = "ReleaseDate"
replace="{{date}}"

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-header -->"
replace="<!-- next-header -->\n\n## [Unreleased] - ReleaseDate"
exactly=1

[[package.metadata.release.pre-release-replacements]]
file="CHANGELOG.md"
search="<!-- next-url -->"
replace="<!-- next-url -->\n[Unreleased]: https://github.com/yaahc/{{crate_name}}/compare/{{tag_name}}...HEAD"
exactly=1
